--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ name: book
 # DataSource Configuration (MySQL)
 # ===============================
 datasource:
-url: jdbc:mysql://localhost:3306/book?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+url: jdbc:mysql://localhost:3306/book?useSSL=false&allowPublicKeyRetrieval=true
 username: root
 password: root
 driver-class-name: com.mysql.cj.jdbc.Driver
