--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 spring:
-application:
-name: book
-# ===============================
-# DataSource Configuration (MySQL)
-# ===============================
-datasource:
-url: jdbc:mysql://localhost:3306/book?useSSL=false&allowPublicKeyRetrieval=true
-username: root
-password: root
-driver-class-name: com.mysql.cj.jdbc.Driver
+  application:
+    name: book
+  datasource:
+    url: jdbc:mysql://localhost:3306/book?useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-# ===============================
-# MyBatis Configuration
-# ===============================
 mybatis:
-mapper-locations: classpath:/mappers/*.xml
-configuration:
-map-underscore-to-camel-case: true
-type-aliases-package: com.kien.book.model
+  mapper-locations: classpath:/mappers/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+  type-aliases-package: com.kien.Jbook.model
+
+messages:
+  errors:
+    invalidValue: "入力された値が無効です。"
+    typeMissmatch: "パラメータの型が間違っています"
+    invalidRequest: "無効なリクエストです。URLをチェックしてください。"
