--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,16 @@ mybatis:
 
 messages:
   errors:
-    invalidValue: "入力された値が無効です。"
-    typeMissmatch: "パラメータの型が間違っています"
     invalidRequest: "無効なリクエストです。URLをチェックしてください。"
+    invalidValue: "入力された値が無効です。"
+    unexpectedError: "予想外のエラーが発生しました。エラー内容："
+    duplicateKey: "プライマリキーが重複しました。別の値にしてください"
+    nonExistentFK: "存在しない外部キーです。"
+    insertError: "書籍情報が正しく登録されませんでした。"
+    noIdGenerated: "書籍情報保存に失敗しました：IDが生成されませんでした"
+    nonExistentBook: "指定IDの書籍情報が存在しません"
+    typeMissmatch: "パラメータの型が間違っています"
+    invalidBookId: "書籍IDは正数である必要があります"
+    invalidPirce: "価格は0以上である必要があります"
+    invalidPublisherId: "出版社IDは正数である必要があります"
+    invalidUserId: "ユーザーIDは正数である必要があります"
